test/classes/delete-free/error-owned-record.good
error-owned-record.chpl:4: error: Owned only works with classes
