test/classes/delete-free/error-owned-record.chpl
record R {
}

var w:owned R;
